--- a/.github/workflows/render_readme.yaml
+++ b/.github/workflows/render_readme.yaml
@@ -6,8 +6,8 @@
 #' 
 on:
   workflow_dispatch
-  # push:
-  #   branches: main
+  push:
+    branches: main
   # pull_request:
   #   branches: main
 
